--- a/frontend/src/pages/LoginPage.css
+++ b/frontend/src/pages/LoginPage.css
@@ -10,17 +10,18 @@ body {
   align-items: center;
   height: 100vh;
   width: 100vw;
-  padding: 2rem;
+  padding: 1rem;
   background: linear-gradient(120deg, #4e54c8, #8f94fb);
   box-sizing: border-box;
 }
 
 .login-card {
   background: #fff;
+  height: 100%;
   width: 100%;
   max-width: 420px;
   min-width: 320px;
-  padding: 2rem;
+  padding: 1rem;
   border-radius: 16px;
   box-shadow: 0 12px 28px rgba(0, 0, 0, 0.15);
   display: flex;
@@ -34,7 +35,7 @@ body {
 
 h2 {
   text-align: center;
-  margin-bottom: 1.5rem;
+  margin-bottom: 1rem;
   font-size: 1.8rem;
   color: #333;
 }
@@ -53,7 +54,7 @@ h2 {
 }
 
 .input-group input {
-  padding: 0.7rem;
+  /* padding: rem; */
   border: 1px solid #ccc;
   border-radius: 8px;
   font-size: 1rem;
@@ -144,6 +145,6 @@ h2 {
     padding: 1rem;
   }
   .login-card {
-    padding: 1.5rem;
+    padding: 1rem;
   }
 }
